--- a/week1/climate.html
+++ b/week1/climate.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<head>Climate Change Causes</head>
+<head>Climate Change Causes
+    <meta name="viewport" content="width=device-width, initial-scale=."/>
+</head>
 <title>Climate Change</title>
 <body>
-    <h1 style="color:darkgreen">The Causes of Climate Change</h1>
+    <h1 style="color:darkgreen"><b>The Causes of Climate Change</h1>
     
-    <h2 style="color:forestgreen">The Greenhouse Effect</h2>
+    <h2 style="color:forestgreen"><i>~The Greenhouse Effect~</i></h2>
 
 <img src="burning.jpg" alt="Burning Earths Atmosphere" width="600px">
 
@@ -32,7 +34,7 @@
         <li>Methane</li>
         <li>Water vapor</li>
     </ol>
-    <p><i>You may also like:</i></p>
+    <p style="color:darkolivegreen"><i>You may also like:</i></p>
     <a href="https://climate.nasa.gov/">NASA: Climate Change and Global Warming</a>
     </body>
 <head>    
