--- a/week2/mental-illness.html
+++ b/week2/mental-illness.html
@@ -32,19 +32,19 @@
                 & quality of life. Perhaps even more important, because when one suffers from 
                 mental illness, one tends to neglect their physical health. Something I, & 
                 millions of others can attest to. But all too often, because of the social 
-                stigmas surrounding mental illness, over <b>75% of people</b> are compelled 
+                stigmas surrounding mental illness, over <b style="color:rgb(201, 100, 114)">75% of people</b> are compelled 
                 to neglect getting diagnosed or recieving the proper treatment, leading to obesity, poor hygiene, 
                 poverty, death, & more. But it doesn't have to be this way, & it shouldn't be 
                 this way. No one should be made to feel ashamed for something they have no 
                 control over. Most of the time, peoples mental problems stem from <i>chemical imballances</i> 
                 in the brain that are, at this point in time, treatable but not currable. Why should something 
-                nearly <b>1 billion people</b> on earth live, & suffer with cause us to be ashamed?
+                nearly <b style="color:rgb(201, 100, 114)">1 billion people</b> on earth live, & suffer with cause us to be ashamed?
                 Two words, it shouldn't.</p>
         </div>
         
         <div>
-            <h4 style="color:rgb(48, 88, 121)"><i><b>please...</b></i></h4>
-            <span style="color:rgb(48, 88, 121)"><i><b>don't feel ashamed....</b></b></i></span>
+            <h4 style="color:rgb(201, 100, 114)"><i><b>please...</b></i></h4>
+            <span style="color:rgb(201, 100, 114)"><i><b>don't feel ashamed....</b></b></i></span>
         </div>
         
         <div>
