--- a/week2/climate.html
+++ b/week2/climate.html
@@ -15,7 +15,7 @@
     
     <h2>The Greenhouse Effect</h2>
 
-<img src="burning.jpg" alt="Burning Earths Atmosphere" width="600px">
+<img src="earth.jpg" alt="Open Earth Climate" width="600px">
 
     <h3>We Live in a Greenhouse</h3>
 
@@ -42,4 +42,4 @@
     <p>You might also like:</p>
     <a href="https://climate.nasa.gov/">NASA: Climate Change and Global Warming</a>
     </body>
-<head>    
+</html>    
