--- a/week2/index.html
+++ b/week2/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <h1>The Causes of Climate Change</h1>
+    <h1><b>The Causes of Climate Change</b></h1>
     
-    <h2>The Greenhouse Effect</h2>
+    <h2><b>The Greenhouse Effect</b></h2>
 
-<img src="earth.jpg" alt="Open Earth Climate" width="600px">
+<img src="earth.jpg" alt="Open Earth Climate" width="240px">
 
-    <h3>We Live in a Greenhouse</h3>
+    <h3><b>We Live in a Greenhouse</b></h3>
 
     <p>Life on Earth depends on energy coming from the Sun. About half the light reaching Earth's
     atmosphere passes through the air and clouds to the surface, where it is absorbed and then 
