--- a/week2/index.html
+++ b/week2/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <h1><b>The Causes of Climate Change</b></h1>
+    <h1>The Causes of Climate Change</h1>
     
-    <h2><b>The Greenhouse Effect</b></h2>
+    <h2>The Greenhouse Effect</h2>
 
 <img src="earth.jpg" alt="Open Earth Climate" width="240px">
 
-    <h3><b>We Live in a Greenhouse</b></h3>
+    <h3>We Live in a Greenhouse</h3>
 
     <p>Life on Earth depends on energy coming from the Sun. About half the light reaching Earth's
     atmosphere passes through the air and clouds to the surface, where it is absorbed and then 
@@ -32,7 +32,7 @@
     respond physically or chemically to changes in temperature are seen as "feedbacks".
     <p>Gases that contribute to the greenhouse effect include:</p>
     
-    <ol>
+    <ol type="1">
         <li>Nitrous oxide</li>
         <li>Carbon dioxide</li>
         <li>Methane</li>
