--- a/week2/mental-illness.html
+++ b/week2/mental-illness.html
@@ -48,10 +48,10 @@
                 Two words: <b style="color:rgb(201, 100, 114)">IT. SHOULDN'T!!!</b></p>
         </div>
         
-        <div> <! - - block - - >
-            <h4 style="color:rgb(201, 100, 114)"><i><b>please...</b></i></h4>
+        <div style="color:rgb(201, 100, 114)"> <! - - block - - >
+            <h4><i><b>please...</b></i></h4>
               <! - - inline - - >
-            <span style="color:rgb(201, 100, 114)"><i><b>don't feel ashamed....</b></b></i></span>
+            <span><i><b>don't feel ashamed....</b></b></i></span>
         </div>
         
         <div> <! - - block - - >
