--- a/week2/mental-illness.html
+++ b/week2/mental-illness.html
@@ -15,10 +15,8 @@
             <h1 style="color:rgb(48, 88, 121)"><b>Mental Illness Needs To Be Destigmatized</b></h1>
               <! - - block - - >
             <img src="you-matter.jpg" alt="don't give up you matter" width="600px">
-              <! - - inline - - >
-            <img src="mental-health.jpg" alt="" width="600px">
-              <! - - inline - - >
-            <img src="sad-smile.jpg" alt="" width="600px">
+            <img src="mental-health.jpg" alt="mental health" width="600px">
+            <img src="sad-smile.jpg" alt="sad girl holding up a smile" width="600px">
               <! - - inline - - >
         </div>
         
@@ -26,9 +24,7 @@
             <h2 style="color:rgb(201, 100, 114)"><b>More information about mental illness:</b></h2>
               <! - - block - - >
             <a href="https://www.mass.gov/info-details/why-do-we-need-to-talk-about-mental-health">why do we need to talk about mental health</a><br>
-              <! - - inline - - >
             <a href="https://marquettewire.org/4046822/featured/koch-destigmatize-mental-health-dont-just-normalize/">destigmatize mental health don't just normalize</a><br>
-              <! - - inline - - >
             <a href="https://blogs.worldbank.org/health/mental-health-lessons-learned-2020-2021-and-forward#:~:text=Today%2C%20nearly%201%20billion%20people,a%20person%20dies%20by%20suicide.">mental health lessons learned 2020 2021 and forward</a>
               <! - - inline - - >
         </div>
