--- a/week2/index.html
+++ b/week2/index.html
@@ -19,7 +19,7 @@
 
 <img src="earth.jpg" alt="Open Earth Climate" width="240px">
 
-    <h3>We Live in a Greenhouse</h3>
+    <h3 id="head3">We Live in a Greenhouse</h3>
 
     <p class="p1">Life on Earth depends on energy coming from the Sun. About half the light reaching Earth's
     atmosphere passes through the air and clouds to the surface, where it is absorbed and then 
@@ -33,15 +33,13 @@
     temperature are described as "forcing" climate change. Gases, such as water vapor, which
     respond physically or chemically to changes in temperature are seen as "feedbacks".
     
-    <div id="couple">
     <p class="p4">Gases that contribute to the greenhouse effect include:</p>
-    <ol id="list"> 
+    <ol> 
         <li>Nitrous oxide</li>
         <li>Carbon dioxide</li>
         <li>Methane</li>
         <li>Water vapor</li>
     </ol>
-    </div>
     
     <p id="p5">You might also like:</p>
     <a href="https://climate.nasa.gov/">NASA: Climate Change and Global Warming</a>
