--- a/week2/index.html
+++ b/week2/index.html
@@ -34,7 +34,7 @@
     respond physically or chemically to changes in temperature are seen as "feedbacks".
     
     <p class="p4">Gases that contribute to the greenhouse effect include:</p>
-    <ol> 
+    <ol id="list"> 
         <li>Nitrous oxide</li>
         <li>Carbon dioxide</li>
         <li>Methane</li>
