--- a/week3/myabout.html
+++ b/week3/myabout.html
@@ -17,7 +17,7 @@
     
     
     <table>
-        <tr id="myTitle">
+        <tr id="myTitles">
             <th>My Age</th>
             <th> My Full~Name</th>
             <th>My Occupation</th>
@@ -26,25 +26,6 @@
             <td>32</td>
             <td>Denisha Shae Myers</td>
             <td>College~Student at Bryan University</td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Playing Guitar</td>
-        </tr>
-
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>Playing Guitar</td>
-
-        <tr>
-            <td><b>Email:</b></td>
-            <td>follow this ~link~</td>
-            <td></td>
-            <td></td>
         </tr>
     </table>
 
