--- a/week3/Wk3_PP_index (2).html
+++ b/week3/Wk3_PP_index (2).html
@@ -92,7 +92,7 @@
                 <td>EVERY year</td>
             </tr>
         </table>
-            <p>As you can see from the table above, even with <b>35%</b> climb in suicide rates from 1999 
+            <p>As you can see from the table above, even with a <b>35%</b> climb in suicide rates from 1999 
                 to 2018, the rate of REPORTED deaths as a result of no healthcare seems to consistently 
                 keep up. But <b>45,000</b> deaths annualy isn't even an exact number. We're also not sure 
                 just how many of those sucides were due to the inability to obtain healthcare. </p>
