--- a/week3/UHC/Wk3_PP_index .html
+++ b/week3/UHC/Wk3_PP_index .html
@@ -70,7 +70,7 @@
         </article>
 
         <table id="table1">
-            <p id="title">Causes of Death</p>
+            <p id="title">~Causes of Death~</p>
             <tr class="myTitles">
                 <th>Year</th>
                 <th>Suicide</th>
@@ -110,7 +110,7 @@
         </aside>
 
         <table id="table2">
-            <p id="title">Number of Uninsured Americans</p>
+            <p id="title">~Number of Uninsured Americans~</p>
             <tr class="myTitles">
                 <th>Year</th>
                 <th>Uninsured</th>
