--- a/week3/position/positioning.html
+++ b/week3/position/positioning.html
@@ -30,7 +30,7 @@
             deaths from lack of health insurance now exceed those caused by many other 
             common causes of death... such as <i>kidney disease</i>.
             Everyone deserves access to proper healthcare.<br>
-            <a id="uhc" href="http://127.0.0.1:5501/week3/UHC/Wk3_PP_index%20.html">~read more~</a> </p>
+            <a id="uhc" href="http://127.0.0.1:5501/week3/UHC/Wk3_PP_index%20.html">read more...</a> </p>
        </div>
             <div id="p2">
             <h2>Destigmatize Mental Health</h2> 
@@ -38,14 +38,14 @@
                 & quality of life. Perhaps even more important, because when one suffers from 
                 mental illness, one tends to neglect their physical health. Something I, & 
                 millions of others can attest to.<br>
-                <a id="dmh" href="http://127.0.0.1:5501/week2/mental-illness.html">~read more~</a></p>
+                <a id="dmh" href="http://127.0.0.1:5501/week2/mental-illness.html">read more...</a></p>
             </div>
                 <div id="p3">
                 <h2>Climate Change</h2>
                 <p>Scientists attribute the global warming trend observed since the mid-20th century to the human
                     expansion of the "greenhouse effect" - warming that results when the atmosphere traps heat
                     radiating from Earth toward space. Certain gases in the atmosphere block heat from eacaping.<br>
-                    <a id="ccc" href="http://127.0.0.1:5501/week2/climate/index.html">~read more~</a> </p>
+                    <a id="ccc" href="http://127.0.0.1:5501/week2/climate/index.html">read more...</a> </p>
                 </div>    
     </article>
     
