--- a/week3/position/positioning.html
+++ b/week3/position/positioning.html
@@ -50,7 +50,7 @@
     </article>
     
     <footer>
-        <p id="bottom">&copy; 2022 <br> B.U. Full Stack Web Development Student: Denisha S. Myers</p>
+        <p id="bottom">&copy; 2022 <br> B.U. Full Stack Web Development Student:<br> Denisha S. Myers</p>
     </footer>
     </footer>
 </body>
