--- a/week4/position/positioning.html
+++ b/week4/position/positioning.html
@@ -26,6 +26,7 @@
     <article>
        <div id="p1">
         <h2>Universal vs U.S. Healthcare</h2>
+        <p>April 11th, 2022</p>
         <p><b>1 in 10</b> people in the U.S. don't have access to healthcare. In fact, 
             deaths from lack of health insurance now exceed those caused by many other 
             common causes of death... such as <i>kidney disease</i>.
@@ -33,7 +34,8 @@
             <a id="uhc" href="http://127.0.0.1:5501/week3/UHC/Wk3_PP_index%20.html">read more...</a> </p>
        </div>
             <div id="p2">
-            <h2>Destigmatize Mental Health</h2> 
+            <h2>Destigmatize Mental Health</h2>
+            <p>April 3rd, 2022</p> 
             <p>Mental health, like physical health, is extremely important to our wellbeing 
                 & quality of life. Perhaps even more important, because when one suffers from 
                 mental illness, one tends to neglect their physical health. Something I, & 
@@ -42,6 +44,7 @@
             </div>
                 <div id="p3">
                 <h2>Climate Change</h2>
+                <p>April 4th, 2022</p>
                 <p>Scientists attribute the global warming trend observed since the mid-20th century to the human
                     expansion of the "greenhouse effect" - warming that results when the atmosphere traps heat
                     radiating from Earth toward space. Certain gases in the atmosphere block heat from eacaping.<br>
