--- a/week4/positioning2/positioning2.html
+++ b/week4/positioning2/positioning2.html
@@ -25,7 +25,7 @@
 
     <article>
        <div id="p1">
-        <img id= "img1" src="forward-healthcare.jpg" alt="pill arrow" width="400px">
+        <img src="forward-healthcare.jpg" alt="pill arrow" width="400px">
         <h2>Universal vs U.S. Healthcare</h2>
         <p id="date">April 11th, 2022</p>
         <p><b>1 in 10</b> people in the U.S. don't have access to healthcare. In fact, 
@@ -35,7 +35,7 @@
             <a id="uhc" href="http://127.0.0.1:5501/week3/UHC/Wk3_PP_index%20.html">read more...</a> </p>
        </div>
             <div id="p2">
-                <img id= "img2" src="sad-smile.jpg" alt="sad girl" width="400px">
+                <img src="sad-smile.jpg" alt="sad girl" width="400px">
             <h2>Destigmatize Mental Health</h2>
             <p id="date">April 3rd, 2022</p> 
             <p>Mental health, like physical health, is extremely important to our wellbeing 
@@ -45,7 +45,7 @@
                 <a id="dmh" href="http://127.0.0.1:5501/week2/mental-illness.html">read more...</a></p>
             </div>
                 <div id="p3">
-                    <img id= "img3" src="sun.jpg" alt="sun" width="400px">
+                    <img src="sun.jpg" alt="sun" width="400px">
                 <h2>Climate Change</h2>
                 <p id="date">April 4th, 2022</p>
                 <p>Scientists attribute the global warming trend observed since the mid-20th century to the human
