--- a/week4/project2/project.html
+++ b/week4/project2/project.html
@@ -102,7 +102,7 @@
         </table>
             
              <span>As you can see from the table above, even with a <b>35%</b> climb in suicide rates from 1999 
-                to 2018, the rate of REPORTED deaths as a result of no healthcare seis to consistently 
+                to 2018, the rate of REPORTED deaths as a result of no healthcare seems to consistently 
                 keep up. But <b>45,000 deaths</b> annualy isn't even an exact number. We're also not sure 
                 just how many of those sucides were due to the inability to obtain healthcare. </span>
         <aside>
