--- a/week6/Project 3/equi-LIBERAL-ium.html
+++ b/week6/Project 3/equi-LIBERAL-ium.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="mainStyle.css">
+    <link rel="stylesheet" href="theStyle.css">
     <title>equi-LIBERAL-ium</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -164,6 +164,16 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td>this is table content</td>
+                    <td>this is table content</td>
+                    <td>this is table content</td>
+                </tr>
+                <tr>
+                    <td>this is table content</td>
+                    <td>this is table content</td>
+                    <td>this is table content</td>
+                </tr>
                 <tr>
                     <td>this is table content</td>
                     <td>this is table content</td>
