--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -77,7 +77,7 @@
 
     <div>
     <h3 id="click">Click the emblem below to create your Cause . . . . .</h3>
-    <span id="create"><a class="link" href="./contact.html"><img src="create.jpg" alt="sign" width="360px"></a></span>
+    <span id="create"><a class="link" href="http://127.0.0.1:5501/week7/Create%20Cause/create.html"><img src="create.jpg" alt="sign" width="360px"></a></span>
     <h3 id="or">or . . . <br>
         You can choose your Cause!</h3></div>
         </div>        
