--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -61,18 +61,43 @@
             </ol>
         </div>
     <p>
-        We created this organization because we believe in the progression of not just the U.S., but for the world! 
-        Here, we care about you & your Cause... & we want to help you get going & getting your Movement going! 
-        <b>THE WORLD NEEDS PEOPLE LIKE YOU!!!</b> Without empathetic go-getters like yourself the term "progression" would 
-        be entirely meaningless. It's <b>YOU</b> who fight for our rights! It's <b>YOU</b> who fight to keep our current rights 
-        intact! It's <b>YOU</b> who speak out for those without a voice! It's <b>YOU</b> who give to those who have nothing, 
-        even when you have nothing to give!
+        We're what we call, an activist assistance program, & we created this organization because we believe in 
+        the progression of not just the U.S., but the world! Here, we care about you & your Cause... & we want 
+        to help you get going & getting your Movement going! <b>THE WORLD NEEDS PEOPLE LIKE YOU!!!</b> Without 
+        empathetic go-getters like yourself the term "progression" would be entirely meaningless. 
+        <br>It's <b>YOU</b> who fight for our rights! It's <b>YOU</b> who fight to keep our current rights intact! 
+        It's <b>YOU</b> who speak out for those without a voice! It's <b>YOU</b> who give to those who have nothing, 
+        even when you have nothing to give!<br>
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
     </p>
         <h3 id="fighting">
-            We support your Movement beCause you're fighting for our future!
+            We support your Movement be Cause you're fighting for our future!
         </h3>
-        <p>
+        <span>
+            Let's face it, our world & our Democracy as a whole is under attack. The so called "strongmen" 
+            of this world are doing everything in their power to take our Freedoms & our Rights away from 
+            us! <b>We cannot let that happen friends!</b> We have to keep our Path of Progression intact... 
+            And the only way to do that is by taking action <b>NOW</b>!!!<br>
             You're our modern <b>HERO'S</b> & we would love to be part of your pogressive movement...
+        </span>
+        <p>
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
         </p> 
 
     <div>
