--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -67,7 +67,7 @@
         empathetic go-getters like yourself the term "progression" would be entirely meaningless. 
         <br>It's <b>YOU</b> who fight for our rights! It's <b>YOU</b> who fight to keep our current rights intact! 
         It's <b>YOU</b> who speak out for those without a voice! It's <b>YOU</b> who give to those who have nothing, 
-        even when you have nothing to give!<br>
+        even when you have nothing to give!<br><br>
         This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
         This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
         This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
