--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -63,7 +63,7 @@
     <p>
         We're what we call, an activist assistance program, & we created this organization because we believe in 
         the progression of not just the U.S., but the world! Here, we care about you & your Cause... & we want 
-        to help you get going & getting your Movement going! <b>THE WORLD NEEDS PEOPLE LIKE YOU!!!</b> Without 
+        to help you get going & getting your Movement moving! <b>THE WORLD NEEDS PEOPLE LIKE YOU!!!</b> Without 
         empathetic go-getters like yourself the term "progression" would be entirely meaningless. 
         <br>It's <b>YOU</b> who fight for our rights! It's <b>YOU</b> who fight to keep our current rights intact! 
         It's <b>YOU</b> who speak out for those without a voice! It's <b>YOU</b> who give to those who have nothing, 
