--- a/week7/Create Cause/create.html
+++ b/week7/Create Cause/create.html
@@ -23,17 +23,17 @@
 
     <form id="formInfo">
         <br><br>
-        <label for="fullName">Movement Name</label>
+        <label for="movementName">Movement Name</label>
         <br>
-        <input type="text" name="fullName">
+        <input type="text" name="movementName">
         <br><br><br>
         <label for="email">Email</label>
         <br>
         <input type="text" name="email">
         <br><br><br>
-        <label for="age">Number of Members</label>
+        <label for="members">Number of Members</label>
         <br>
-        <input type="number" name="age">
+        <input type="number" name="members">
         <br><br>
         <button type="button" id="submit">Submit</button>
     </form>
