--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="page.css">
-    <title>Activist Assistance</title>
+    <title>About Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Architects+Daughter&family=Babylonica&family=Berkshire+Swash&family=Caveat:wght@400;500;600;700&family=Cinzel:wght@400;500;600;700;800;900&family=Cookie&family=Courgette&family=Dancing+Script:wght@400;500;600;700&family=Gloria+Hallelujah&family=Great+Vibes&family=Handlee&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Indie+Flower&family=Ingrid+Darling&family=Kalam:wght@300;400;700&family=Kaushan+Script&family=Lavishly+Yours&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Meie+Script&family=MonteCarlo&family=Ms+Madi&family=My+Soul&family=Neucha&family=Pacifico&family=Parisienne&family=Patrick+Hand&family=Permanent+Marker&family=Sacramento&family=Satisfy&family=Send+Flowers&family=Shadows+Into+Light&family=Square+Peg&family=Tangerine:wght@400;700&family=Tapestry&family=Updock&family=Water+Brush&family=Whisper&family=Yellowtail&display=swap" rel="stylesheet">
@@ -67,18 +67,27 @@
         empathetic go-getters like yourself the term "progression" would be entirely meaningless. 
         <br>It's <b>YOU</b> who fight for our rights! It's <b>YOU</b> who fight to keep our current rights intact! 
         It's <b>YOU</b> who speak out for those without a voice! It's <b>YOU</b> who give to those who have nothing, 
-        even when you have nothing to give!<br><br>
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
+        even when you have nothing to give!<br>
+        Keep fighting for effective policies that treat everyone with dignity &  respect! Sadly, the exremely negative 
+        rhetoric & policies from the Right have been breaking our legitimate positive reputation & continue to increase 
+        in consistency & severity...<br>
+        Liberals have a lengthy record of environmental protection. Our natural environment
+        is precious & it's our duty to heal & protect it!<br>
+        Liberals don't just live for today. They don't want to live in the past... like some. They're always 
+        considering our tomorrow by way of our environment, technology, education, rights, & progression as a 
+        whole...<br>
+        Liberals believe in working with our friends across the world to make our WORLD a better place
+        for all! Liberals see Nationalism as being selfish, & completely illogical. We have to work 
+        together if we ever want to move forward.<br>
+        Liberalism means standing up for Human Rights!!! Believing that every. single. individual. 
+        deserves equal rights, freedom, & treament. Unfortunately, in too many countries, across the 
+        Globe, being LGBT+ or a woman means you don't have equal opportunities, or even basic Human 
+        Rights! But Liberals fight for those who aren't able, or allowed to fight for themselves!<br>
+        People from all over the world bring enormous benifits to our Country by way of our economy, 
+        culture, & community. Liberals don't merely recognize the benifits of Immigration, they celebrate 
+        them! They fight for effective policies that treat everyone with dignity & respect. Sadly, the 
+        exremely negative rhetoric & policies from the Right that have broken our Immigration 
+        system continue to increase in consistency & severity.           
     </p>
         <h3 id="fighting">
             We support your Movement be Cause you're fighting for our future!
@@ -88,6 +97,15 @@
             of this world are doing everything in their power to take our Freedoms & our Rights away from 
             us! <b>We cannot let that happen friends!</b> We have to keep our Path of Progression intact... 
             And the only way to do that is by taking action <b>NOW</b>!!!<br>
+            The depressing truth of the state of Democracy around the world is that it is in terrible
+            danger! The United States "electing" a Dictator Sympathizer has only exacerbated the situation...
+            Trump coddled & cozied up to every Tyrannical, Authoritarian, Dictator he could get his hands on.
+            Emboldening the so called "Strong Men" of the world to increase their attacks on Democracy.<br>
+            But Liberals champion the Democratic rights of ALL individuals. They play a vital role in creating
+            a fairer, more equal world... And not just verbally, but through passionate ACTION!!!<br>
+            There is a creeping rise of Authoritarianismacross the Globe & something must be done to stop it! 
+            With Russia's disinformation campaign in 2016 that seems to have continued to spread & worsen by the 
+            day. Democracy seems to be hanging by a thread... & something must be done... NOW!!!    
             You're our modern <b>HERO'S</b> & we would love to be part of your pogressive movement...
         </span>
         <p>
@@ -116,7 +134,7 @@
                 <li id="vote"><a class="link" href="http://127.0.0.1:5501/week7/Voting%20Rights%20copy%205/vote.html"><img src="voting.jpg" alt="fist" width="200px"></a></li>
                 <li id="blm"><a class="link" href="http://127.0.0.1:5501/week7/Black%20Lives%20Matter%20copy%203/blm.html"><img src="blm.jpg" alt="fist" width="200px"></a></li>
                 <li id="pride"><a class="link" href="http://127.0.0.1:5501/week7/Pride/pride.html"><img src="pride.jpg" alt="fist" width="200px"></a></li>
-                <li id="asian"><a class="link" href="http://127.0.0.1:5501/week7/Stop%20Asian%20Hate/asian.html"><img src="asian.jpg" alt="sign" width="200px"></a></li>
+                <li id="daca"><a class="link" href="http://127.0.0.1:5501/week7/DACA/daca.html"><img src="bunny.jpg" alt="sign" width="200px"></a></li>
                 <li id="climate"><a class="link" href="http://127.0.0.1:5501/week7/Climate%20Crisis/climate.html"><img src="climate.jpg" alt="sign" width="200px"></a></li>
              </ul>
         </aside>
