--- a/week7/Capstone Project/page.html
+++ b/week7/Capstone Project/page.html
@@ -79,6 +79,13 @@
         Liberals believe in working with our friends across the world to make our WORLD a better place
         for all! Liberals see Nationalism as being selfish, & completely illogical. We have to work 
         together if we ever want to move forward.<br>
+        Liberals have done so much for our Country. They support & have progressed Womens rights, 
+        equal rights & treatment for the LGBTQ+ community,  
+        People from all over the world bring enormous benifits to our Country by way of our economy, 
+        culture, & community. Liberals don't merely recognize the benifits of Immigration, they celebrate 
+        them! They fight for effective policies that treat everyone with dignity & respect. Sadly, the 
+        exremely negative rhetoric & policies from the Right that have broken our Immigration 
+        system continue to increase in consistency & severity.<br>
         Liberalism means standing up for Human Rights!!! Believing that every. single. individual. 
         deserves equal rights, freedom, & treament. Unfortunately, in too many countries, across the 
         Globe, being LGBT+ or a woman means you don't have equal opportunities, or even basic Human 
@@ -89,9 +96,9 @@
         exremely negative rhetoric & policies from the Right that have broken our Immigration 
         system continue to increase in consistency & severity.           
     </p>
-        <h3 id="fighting">
+        <h1 id="fighting">
             We support your Movement be Cause you're fighting for our future!
-        </h3>
+        </h1>
         <span>
             Let's face it, our world & our Democracy as a whole is under attack. The so called "strongmen" 
             of this world are doing everything in their power to take our Freedoms & our Rights away from 
@@ -108,15 +115,6 @@
             day. Democracy seems to be hanging by a thread... & something must be done... NOW!!!    
             You're our modern <b>HERO'S</b> & we would love to be part of your pogressive movement...
         </span>
-        <p>
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-            This is filler text. This is filler text. This is filler text. This is filler text. This is filler text. 
-        </p> 
 
     <div>
     <h3 id="click">Click the emblem below to create your Cause . . . . .</h3>
