--- a/week7/1 Contact/contact.html
+++ b/week7/1 Contact/contact.html
@@ -25,7 +25,7 @@
             <h3 id="moving"><b>Click below to go home. . .<br>or. . .<br>For more information & create a Cause. . . .<br></b></h3>
             <ul>
                 <li id="home"><a class="link" href="http://127.0.0.1:5501/week7/!%20Home/home.html"><img src="home.png" alt="sign" width="150px"></a>eee</li>
-                <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/Capstone%20Project/page.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
+                <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/About%20Us/about.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
              </ul>
         </nav>
 
@@ -33,13 +33,14 @@
         </main>
 
         <aside class="aside">
-            <span id="causes"><b>Causes. . . . .</b></span>  
+            <span id="causes"><b>Causes . . .</b></span>  
             <ul>
-                <li id="women"><a class="link" href="http://127.0.0.1:5501/week7/might%20be%20it!/Womens%20Rights/1womensrights.html"><img src="womens.jpg" alt="writing" width="200px"></a></li>
-                <li id="blm"><a class="link" href="http://127.0.0.1:5501/week7/might%20be%20it!/3blm.html"><img src="blm.jpg" alt="fist" width="200px"></a></li>
-                <li id="pride"><a class="link" href="http://127.0.0.1:5501/week7/might%20be%20it!/4pride.html"><img src="pride.jpg" alt="fist" width="200px"></a></li>
+                <li id="women"><a class="link" href="http://127.0.0.1:5501/week7/Womens%20Rights/womensrights.html"><img src="womens.jpg" alt="writing" width="200px"></a></li>
+                <li id="vote"><a class="link" href="http://127.0.0.1:5501/week7/Voting%20Rights%20copy%205/vote.html"><img src="voting.jpg" alt="fist" width="200px"></a></li>
+                <li id="blm"><a class="link" href="http://127.0.0.1:5501/week7/Black%20Lives%20Matter%20copy%203/blm.html"><img src="blm.jpg" alt="fist" width="200px"></a></li>
+                <li id="pride"><a class="link" href="http://127.0.0.1:5501/week7/Pride/pride.html"><img src="pride.jpg" alt="fist" width="200px"></a></li>
                 <li id="daca"><a class="link" href="http://127.0.0.1:5501/week7/DACA/daca.html"><img src="bunny.jpg" alt="sign" width="200px"></a></li>
-                <li id="climate"><a class="link" href="http://127.0.0.1:5501/week7/might%20be%20it!/6climate.html"><img src="climate.jpg" alt="sign" width="200px"></a></li>
+                <li id="climate"><a class="link" href="http://127.0.0.1:5501/week7/Climate%20Crisis/climate.html"><img src="climate.jpg" alt="sign" width="200px"></a></li>
              </ul>
         </aside>
 
