--- a/week7/About Us/about.html
+++ b/week7/About Us/about.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="about.css">
     <title>About Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -117,8 +117,8 @@
         </span>
 
     <div>
-    <h3 id="click">Click the emblem below to create your Cause . . . . .</h3>
-    <span id="create"><a class="link" href="http://127.0.0.1:5501/week7/Create%20Cause/create.html"><img src="create.jpg" alt="sign" width="360px"></a></span>
+    <h3 id="click">click the emblem below to<br> Create a Cause . . .</h3>
+    <span id="create"><a class="link" href="http://127.0.0.1:5501/week7/Create%20a%20Cause/create.html"><img src="create.jpg" alt="sign" width="360px"></a></span>
     <h3 id="or">or . . . <br>
         You can choose your Cause!</h3></div>
         </div>        
