--- a/week7/! Home/home.html
+++ b/week7/! Home/home.html
@@ -24,9 +24,11 @@
         <nav class="nav">
             <h3 id="moving"><b>Click below for more information & create a Cause. . .<br>or. . .<br>Contact us. . . .<br></b></h3>
             <ul>
-                <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/Capstone%20Project/page.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
-                <li id="contact"><a class="link" href="http://127.0.0.1:5501/week7/1%20Contact/contact.html"><img src="contact.png" alt="sign" width="150px"></a>eee</li>
-             </ul>
+               
+                <ul>
+                    <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/About%20Us/about.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
+                    <li id="contact"><a class="link" href="http://127.0.0.1:5501/week7/1%20Contact/contact.html"><img src="contact.png" alt="sign" width="150px"></a>eee</li>
+                 </ul>
         </nav>
 
         <main class="main">
