--- a/week7/Create a Cause/create.html
+++ b/week7/Create a Cause/create.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="create.css">
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Caveat:wght@400;500;600&family=Courgette&family=Indie+Flower&family=Ms+Madi&family=Shadows+Into+Light&family=Square+Peg&family=Whisper&display=swap" rel="stylesheet">
-    <title>Insert your Cause Information</title>
+    <title>Create a Cause</title>
 </head>
 
 <body>
