--- a/week7/Womens Rights/womensrights.html
+++ b/week7/Womens Rights/womensrights.html
@@ -22,10 +22,10 @@
         </div>
         
         <nav class="nav">
-            <h3 id="moving"><b>Click below for more information & create a Cause. . .<br> Visit our Homepage. . . . . <br>or. . .<br>Contact us. . . .<br></b></h3>
+            <h3 id="moving"><b>Click below to visit our Homepage . . . . . <br><br>View more information & create a Cause.<br>or . . .<br>Contact us . . . .<br></b></h3>
             <ul>
                 <li id="home"><a class="link" href="http://127.0.0.1:5501/week7/!%20Home/home.html"><img src="home.png" alt="sign" width="150px"></a>eee</li>
-                <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/Capstone%20Project/page.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
+                <li id="about"><a class="link" href="http://127.0.0.1:5501/week7/About%20Us/about.html"><img src="about.png" alt="sign" width="150px"></a>eee</li>
                 <li id="contact"><a class="link" href="http://127.0.0.1:5501/week7/1%20Contact/contact.html"><img src="contact.png" alt="sign" width="150px"></a>eee</li>
              </ul>
         </nav>
@@ -34,7 +34,7 @@
         </main>
 
         <aside class="aside">
-            <span id="causes"><b>Causes. . . . .</b></span>  
+            <span id="causes"><b>Causes . . .</b></span>  
             <ul>
                 <li id="vote"><a class="link" href="http://127.0.0.1:5501/week7/Voting%20Rights%20copy%205/vote.html"><img src="voting.jpg" alt="fist" width="200px"></a></li>
                 <li id="blm"><a class="link" href="http://127.0.0.1:5501/week7/Black%20Lives%20Matter%20copy%203/blm.html"><img src="blm.jpg" alt="fist" width="200px"></a></li>
