--- a/week7/! Home/home.html
+++ b/week7/! Home/home.html
@@ -46,7 +46,14 @@
              </ul>
         </aside>
 
+
         <footer class="footer">
+            <p id="myFoot"> 
+             <b>Thank you so much for choosing us to assist in your fight for Justice & Equality!<br> 
+                We couldn't be happier to have another movement to count on to defend <br>&<br> secure 
+                our future... <br>Because without you, our future would be bleak <br>&<br>
+                ultimately non-existant.</b> 
+            </p>
         </footer>
     
     </div>
